--- a/imports/ui/components/cloudinary-upload/cloudinary-upload.html
+++ b/imports/ui/components/cloudinary-upload/cloudinary-upload.html
@@ -23,8 +23,10 @@
       sizing='cover'
       preload
       fade
-      src='https://res.cloudinary.com/pigments/image/upload/w_150,h_90,c_fill,q_70/{{item.downloadurl}}.jpg'>
+      src=[[imageUrl]]>
     </iron-image>
+
+<!-- https://res.cloudinary.com/pigments/image/upload/w_150,h_90,c_fill,q_70/{{item.downloadurl}} -->
 
     <label for='image'>
       <input id='image' on-change='uploadImage' type='file' accept='.png, .gif, .jpg, .jpeg'>
@@ -37,35 +39,45 @@
   require('@polymer/polymer/polymer.html');
   require('@polymer/iron-image/iron-image.html');
 
-  require('@andreasgalster/fsn-boilerplate/fsn-boilerplate.html');
+  require('@andreasgalster/fsn-boilerplate/dist/fsn-boilerplate.html');
 
   Polymer({
     is: 'cloudinary-upload',
     properties: {
       imagesAvailable: Boolean,
       valid: Boolean,
-      imageId: String,
+      imageId: {
+        type: String,
+        observer: 'imageUrl'
+      },
       baseUrl: {
         type: String,
         value: `https://res.cloudinary.com/${Meteor.settings.public.cloudinary.cloud_name}/image/upload/`
       }
     },
     uploadImage: function(e) {
-      let file = e.currentTarget.files;
-      Meteor.call('upload', file, (err, res) => {
+      console.log(e.currentTarget.files[0].name);
+      let file = e.currentTarget.files[0].name;
+      Meteor.call('imageUpload', file, (err, res) => {
+        console.log('blubb');
         if(err) {
+          console.log(`error is ${err}`);
           return;
         } else {
+          console.log(`result is ${res}`);
           this.imageId = res;
           this.valid = true;
         }
       });
     },
     imageUrl: function() {
-      return
-      this.imageId ?
-      `${this.baseUrl}w_150,h_90,c_fill,q_70/${this.ImageId}` :
-      `${this.baseUrl}w_150,h_90,c_fill,q_70/yolo`;
+      // return
+      // this.imageId ?
+      // `${this.baseUrl}w_150,h_90,c_fill,q_70/${this.ImageId}` :
+      // `${this.baseUrl}w_150,h_90,c_fill,q_70/yolo`;
+
+      return `${this.baseUrl}w_150,h_90,c_fill,q_70/${this.ImageId}`
+
     }
 
   });
