onboarding complete as replacement for old forms

--- a/imports/client/components/login-form/login-form.html
+++ b/imports/client/components/login-form/login-form.html
@@ -1,26 +1,11 @@
-<link rel="import" href="../../google-elements/polymer/polymer.html">
-<link rel="import" href="../../google-elements/paper-input/paper-input.html">
-<link rel="import" href="../../google-elements/gold-email-input/gold-email-input.html">
-
-<link rel="import" href="../../google-elements/paper-button/paper-button.html">
-<link rel="import" href="../../google-elements/paper-toast/paper-toast.html">
-<link rel="import" href="../../google-elements/paper-spinner/paper-spinner.html">
-
-
-<link rel="import" href="../../google-elements/iron-flex-layout/iron-flex-layout-classes.html">
-<link rel="import" href="../../google-elements/iron-icon/iron-icon.html">
-<link rel="import" href="../../custom-elements/custom-icons.html">
-
-
-<dom-module id="login-form">
+<dom-module id='login-form'>
 
   <template>
-    <style is="custom-style" include="iron-positioning iron-flex-alignment iron-flex"></style>
     <style>
       :host {
         background: white;
         padding: 10px;
-        margin:0;  
+        margin:0;
         display: block;
       }
 
@@ -64,7 +49,7 @@
       section#logged_in {
         background: var(--grey-darker, #384555);
         margin: -30px;
-        padding: 20px;        
+        padding: 20px;
       }
 
       footer {
@@ -72,7 +57,7 @@
       }
 
       footer span {
-        color: var(--blue, #3896ed); 
+        color: var(--blue, #3896ed);
         font-weight: 500;
         cursor: pointer;
       }
@@ -89,140 +74,110 @@
         position: absolute;
         right: 0;
         top: 50%;
-        transform: translateY(-50%);        
+        transform: translateY(-50%);
       }
-
-      paper-spinner {
-        --paper-spinner-layer-1-color: var(--pigments-blue-500);
-        --paper-spinner-layer-2-color: var(--pigments-blue-500);
-        --paper-spinner-layer-3-color: var(--pigments-blue-500);
-        --paper-spinner-layer-4-color: var(--pigments-blue-500);
-
-
-        position: absolute;
-        top: 50%;
-        right: 50%;
-        transform: translate(-50%,-50%);        
-      }
-
     </style>
 
 
-    <paper-toast class='fixed-bottom' duration="7000">
-      <paper-button no-ink on-tap="close">Close</paper-button>
+    <paper-toast class='fixed-bottom' duration='7000'>
+      <paper-button no-ink on-tap='close'>Close</paper-button>
     </paper-toast>
 
-    <template is="dom-if" if="{{loggedIn}}">
-      <section id='logged_in'>
-          <h1>You are logged in</h1>
-          <a href='/account'><paper-button>Visit your account</paper-button></a>
-          <a href='/projects'><paper-button>Visit your projects</paper-button></a>
-          <span id='logout' on-tap='logout'>Logout from your account</span>
-      </section>
-    </template>
+    <paper-dialog with-backdrop>
 
-    <template is="dom-if" if="{{!loggedIn}}">
       <section>
-        <!-- <paper-spinner active></paper-spinner> -->
-
         <form>
-          <template is="dom-if" if="{{alreadyMember}}">
+          <template is='dom-if' if={{alreadyMember}}>
             <h1>Login as a user</h1>
           </template>
 
-          <template is="dom-if" if="{{!alreadyMember}}">
+          <template is='dom-if' if={{!alreadyMember}}>
             <h1>Sign up as a user</h1>
           </template>
-            
-          <h2>What's your e-mail?</h2>              
-          <gold-email-input 
-            class='validate' 
-            no-label-float 
+
+          <gold-email-input
+            class='validate'
+            no-label-float
             required
             auto-validate
-            label="Your e-mail address" 
-            error-message="This doesn't look like an e-mail address."
-            value='{{email}}'>
+            label='Your e-mail address'
+            error-message='This does not look like an e-mail address.'
+            value={{email}}>
           </gold-email-input>
 
-          <h2>Tell us a secret!</h2>
-          <paper-input 
+          <paper-input
             class='validate'
-            no-label-float 
+            no-label-float
             required
             auto-validate
-            minlength="6"
-            name="registerPassword" 
-            label="Your password" 
-            type='password' 
-            error-message="Looks like the password is shorter than 6 characters."                
-            value='{{password}}'>
-            <iron-icon hidden$='{{visiblePassword}}' on-tap='showPassword' suffix icon="pigments:visibility"></iron-icon>
-            <iron-icon hidden$='{{!visiblePassword}}' on-tap='hidePassword' suffix icon="pigments:visibility-off"></iron-icon>
+            minlength='6'
+            name='registerPassword'
+            label='Your password'
+            type='password'
+            error-message='Looks like the password is shorter than 6 characters.'
+            value={{password}}>
+            <iron-icon hidden$={{visiblePassword}} on-tap='showPassword' suffix icon='fsn:visibility'></iron-icon>
+            <iron-icon hidden$={{!visiblePassword}} on-tap='hidePassword' suffix icon='fsn:visibility-off'></iron-icon>
           </paper-input>
 
-          <template is="dom-if" if="{{alreadyMember}}">
+          <template is='dom-if' if={{alreadyMember}}>
             <paper-button on-tap='loginUser'>Login</paper-button>
             <footer>Not a member? <span on-tap='setAlreadyMember'>Register here.</span></footer>
           </template>
 
-          <template is="dom-if" if="{{!alreadyMember}}">
+          <template is='dom-if' if={{!alreadyMember}}>
             <paper-button on-tap='signupUser'>Sign up</paper-button>
             <footer>Already a member? <span on-tap='setAlreadyMember'>Login here.</span></footer>
           </template>
 
          </form>
       </section>
-    </template>
+
+    </paper-dialog>
 
   </template>
-
 </dom-module>
 
 <script>
+  require('@polymer/polymer/polymer.html');
+  require('@polymer/paper-input/paper-input.html');
+  require('@polymer/paper-dialog/paper-dialog.html');
+  require('@polymer/gold-email-input/gold-email-input.html');
+  require('@polymer/paper-button/paper-button.html');
+  require('@polymer/paper-toast/paper-toast.html');
+
+
+  require('@polymer/iron-icon/iron-icon.html');
+  require('@andreasgalster/fsn-icons/dist/fsn-icons.html');
+
 
   Polymer({
     is: 'login-form',
     properties: {
       ////////////////////////////////////////////////
-      // determines if form is set to vendor signup //
-      ////////////////////////////////////////////////
-      vendor: {
-        type: Boolean,
-        value: false
-      },
-
-      redirectTo: {
-        type: String,
-        value: function() {
-          return FlowRouter.current().path;
-        }
-      },
-
-      ////////////////////////////////////////////////
       // user state - changes behavior on logged in //
-      ////////////////////////////////////////////////      
+      ////////////////////////////////////////////////
       loggedIn: {
         type: Boolean,
         value: false
       },
       ///////////////////////////////////////////////////
       // defines if state is currently login or signup //
-      ///////////////////////////////////////////////////  
+      ///////////////////////////////////////////////////
       alreadyMember: {
         type: Boolean,
         value: false
       },
       ///////////////////////////////////////////////////
       // defines if state is currently login or signup //
-      ///////////////////////////////////////////////////  
+      ///////////////////////////////////////////////////
       visiblePassword: {
         type: Boolean,
         value: false
-      },      
+      },
       ///////////////////////////////////////////////////
       // defines if state is currently login or signup //
-      ///////////////////////////////////////////////////      
+      ///////////////////////////////////////////////////
       signup: {
         type: Boolean,
         value: false
@@ -232,14 +187,11 @@
       ///////////////////////////////////////////////////
       callback: {
         type: String,
-      },             
+      },
     },
 
-    attached: function() {
-      var self = this;
-      Tracker.autorun(function () {
-        self.loggedIn = Meteor.user();
-      }); 
+    tracker: function() {
+      this.loggedIn = Meteor.user();
     },
 
     logout: function() {
@@ -247,7 +199,6 @@
     },
 
     validate: function() {
-      var self = this;
       var validity = [];
 
       Polymer.dom(this.root).querySelectorAll('.validate').forEach(function(value) {
@@ -258,34 +209,24 @@
       return validity;
     },
 
-    signupUser: function(e) {    
+    signupUser: function(e) {
       var user;
-      var self = this;
 
       user = {
         password: this.password,
         email: this.email,
-        profile: {
-          vendor: this.vendor,
-          vendorVerified: false
-        }
       };
 
       this.validate();
 
       if ( _.includes(this.validate(), true) === false ) {
-        Accounts.createUser(user, function (error, result) {
-          if (error) {
-            // console.log(error);
-            // console.log(error.error);
-            if (error.error === 403) {
-              self.$$('paper-toast').text = 'This e-mail is already in use.';
-              self.$$('paper-toast').toggle();
+        Accounts.createUser(user, (err, res) => {
+          if (err) {
+            if (err.error === 403) {
+              this.$$('paper-toast').text = 'This e-mail is already in use.';
+              this.$$('paper-toast').toggle();
             }
           }
-
-
-          // Meteor.call('');Accounts.sendVerificationEmail( Meteor.userId(), Meteor.user().emails[0].address);
         });
       }
 
@@ -293,43 +234,44 @@
 
 
 
-    loginUser: function(e) {    
-      var self = this;
+    loginUser: function(e) {
       this.validate();
 
-      if ( _.includes(this.validate(), true) === false ) {        
-        Meteor.loginWithPassword(this.email, this.password, function (error, result) {
-          if (error) {
-            if (error.error === 403) {
-              self.$$('paper-toast').text = 'This account does not exist.';          
-              self.$$('paper-toast').toggle();
+      if ( _.includes(this.validate(), true) === false ) {
+        Meteor.loginWithPassword(this.email, this.password, (err, res) => {
+          if (err) {
+            if (err.error === 403) {
+              this.$$('paper-toast').text = 'This account does not exist.';
+              this.$$('paper-toast').toggle();
             }
           }
 
           else {
-            console.log('logged in');
-            FlowRouter.go('/' + self.redirectTo);
           }
         });
       }
     },
 
-    showPassword: function(e) {    
+    showPassword: function(e) {
       this.$$('paper-input').setAttribute('type','text');
       this.visiblePassword = true;
     },
 
-    hidePassword: function(e) {  
+    hidePassword: function(e) {
       this.$$('paper-input').setAttribute('type','password');
       this.visiblePassword = false;
     },
 
-    setAlreadyMember: function(e) {    
+    setAlreadyMember: function(e) {
       this.toggleAttribute('already-member');
     },
 
     close: function() {
-      this.$$('paper-toast').close();    
+      this.$$('paper-toast').close();
+    },
+
+    toggle: function() {
+      this.$$('paper-dialog').toggle();
     },
 
   });
